# a2-coursework

./: .gitignore  module1.ipynb  module2.ipynb  pyproject.toml
medimg/: __init__.py  analysis.py  data.py  visualisation.py
tests/: conftest.py  test_analysis.py  test_data.py  test_visualisation.py
