[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medimg"
version = "0.1.0"
description = "Medical imaging analysis for CT reconstruction and MRI denoising"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["medimg*"]
