[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medimg"
version = "0.1.0"
description = "Medical imaging analysis for CT reconstruction and MRI denoising"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "matplotlib",
    "PyWavelets",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.setuptools.packages.find]
include = ["medimg*"]